complete basic rule

--- a/priv/rules.yml
+++ b/priv/rules.yml
@@ -1,4 +1,10 @@
 - neko_id: 1
+  level: 0
+  type: basic
+  threshold: 50
+  status: completed
+
+- neko_id: 1
   level: 1
   type: basic
   threshold: 100
@@ -8,4 +14,64 @@
   level: 2
   type: basic
   threshold: 200
+  status: completed
+
+- neko_id: 1
+  level: 3
+  type: basic
+  threshold: 300
+  status: completed
+
+- neko_id: 1
+  level: 4
+  type: basic
+  threshold: 400
+  status: completed
+
+- neko_id: 1
+  level: 5
+  type: basic
+  threshold: 500
+  status: completed
+
+- neko_id: 1
+  level: 6
+  type: basic
+  threshold: 666
+  status: completed
+
+- neko_id: 1
+  level: 7
+  type: basic
+  threshold: 800
+  status: completed
+
+- neko_id: 1
+  level: 8
+  type: basic
+  threshold: 1000
+  status: completed
+
+- neko_id: 1
+  level: 9
+  type: basic
+  threshold: 2000
+  status: completed
+
+- neko_id: 1
+  level: 10
+  type: basic
+  threshold: 3500
+  status: completed
+
+- neko_id: 1
+  level: 11
+  type: basic
+  threshold: 5000
+  status: completed
+
+- neko_id: 1
+  level: 12
+  type: basic
+  threshold: 7500
   status: completed
