--- a/.deliver/config
+++ b/.deliver/config
@@ -6,4 +6,4 @@ BUILD_AT="/tmp/edeliver/neko/builds"
 
 PRODUCTION_HOSTS="neko"
 PRODUCTION_USER="neko"
-DELIVER_TO="/home/neko/prod"
+DELIVER_TO="/home/apps"
