--- a/priv/rules_test.yml
+++ b/priv/rules_test.yml
@@ -1,16 +1,16 @@
-- neko_id: 1
+- neko_id: animelist
   level: 0
   type: basic
   threshold: 1
   status: completed
 
-- neko_id: 1
+- neko_id: animelist
   level: 1
   type: basic
   threshold: 3
   status: completed
 
-- neko_id: 1
+- neko_id: animelist
   level: 2
   type: basic
   threshold: 5
