--- a/priv/rules/comedy.yml
+++ b/priv/rules/comedy.yml
@@ -4,7 +4,7 @@
   threshold: 30
   filters:
     genre_id: 4
-  shikimori:
+  metadata:
     image: https://kawai.shikimori.org/system/user_images/original/50587/458876.jpg
     border: "#5dbdd9"
     title_ru: But then i lol'd
