--- a/priv/rules/comedy.yml
+++ b/priv/rules/comedy.yml
@@ -6,6 +6,6 @@
     genre_id: 4
   metadata:
     image: https://kawai.shikimori.org/system/user_images/original/50587/458876.jpg
-    border: "#5dbdd9"
+    border_color: "#5dbdd9"
     title_ru: But then i lol'd
     text_ru: Неужели вам понравился японский юмор?
