--- a/priv/rules/comedy.yml
+++ b/priv/rules/comedy.yml
@@ -3,7 +3,8 @@
   algo: simple
   threshold: 30
   filters:
-    genre_id: 4
+    genre_ids:
+      - "4"
   metadata:
     image: https://kawai.shikimori.org/system/user_images/original/50587/458876.jpg
     border_color: "#5dbdd9"
