--- a/priv/rules/historical.yml
+++ b/priv/rules/historical.yml
@@ -43,7 +43,7 @@
     <<: *filters
   metadata:
     title_ru: Путешественник во времени
-    text_ru: |>
+    text_ru: |-
       Машина времени есть у каждого. Для путешествия в прошлое есть воспоминания, а для путешествия в будущее — мечты.
     image:
       - http://i.imgur.com/jpu502R.gif
