--- a/priv/rules/mecha.yml
+++ b/priv/rules/mecha.yml
@@ -47,7 +47,7 @@
     <<: *filters
   metadata:
     title_ru: DO THE IMPOSSIBLE, SEE THE INVISIBLE!
-    text_ru: |>
+    text_ru: |-
       Мы снесем любую стену вставшую на пути! Если нет пути ,мы его проложим!
       Магма течет в наших венах, раскаляя сердца!
     image:
