--- a/priv/rules/seinen.yml
+++ b/priv/rules/seinen.yml
@@ -6,7 +6,7 @@
     genre_ids:
       - 42
   metadata:
-    text_ru: |>
+    text_ru: |-
       — Ты похож на нормального.
       — Наверное. Я ещё только учусь.
     image: https://moe.shikimori.org/system/user_images/original/50587/459007.jpg
@@ -41,5 +41,4 @@
     <<: *filters
   metadata:
     title_ru: Вы же пострадаете!
-    text_ru: Если у вас нет ста пушек в руках и одной в сердце, то дальнейший просмотр
-    становиться рискованным.
+    text_ru: Если у вас нет ста пушек в руках и одной в сердце, то дальнейший просмотр становиться рискованным.
