--- a/priv/rules/oldfag.yml
+++ b/priv/rules/oldfag.yml
@@ -6,7 +6,7 @@
     year_lte: 2000
   metadata:
     title_ru: Ценитель классики
-    text_ru: Раньше было лучше: деревья — выше, трава — зеленее, а аниме — интереснее.
+    text_ru: "Раньше было лучше: деревья — выше, трава — зеленее, а аниме — интереснее."
     image: http://i.imgur.com/I3DvFcX.png
     border_color: "#c5d0e6"
 
