--- a/priv/rules/space.yml
+++ b/priv/rules/space.yml
@@ -22,7 +22,7 @@
   filters:
     <<: *filters
   metadata:
-    title_ru: |>
+    title_ru: |-
       Земля отсюда совсем крошечная
       Астронавт на земной орбите
     text_ru: До чего же прекрасна Земля, если глядеть на неё сверху! Однако, не слишком ли тесно? Вашему миру пора расширяться — от маленькой Земли до целой вселенной.
@@ -57,7 +57,7 @@
     <<: *filters
   metadata:
     title_ru: Император галактики
-    text_ru: |>
+    text_ru: |-
       На завтрак я сегодня ел темную энергию, укутавшись в незримую материю вселенной.
       И запивая молоком гравитационных волн, разлитых звездами которых давно нет, я перевариваю боль вселенной.
       Я здесь живу веками во тьме построенной из сгустков атомов рожденных смертью света и сотканных в агонии случайных встреч.
