--- a/priv/rules/fujoshi.yml
+++ b/priv/rules/fujoshi.yml
@@ -1,8 +1,9 @@
-- neko_id: fujoshi
+- &defaults
+  neko_id: fujoshi
   level: 1
   algo: simple
   threshold: 30
-  filters: &filters
+  filters:
     genre_ids:
       - 28
       - 33
@@ -12,38 +13,27 @@
     image: http://i.imgur.com/R6PqIoT.png
     border_color: "#e82a8d"
 
-- neko_id: fujoshi
+- <<: *defaults
   level: 2
-  algo: simple
   threshold: 50
-  filters:
-    <<: *filters
   metadata:
     title_ru: Голубок
     text_ru: 'Поворачивать назад уже слишком поздно. Пора совершить каминг-аут и наконец-то признать свою любовь к "не очень традиционным" историям.'
     image: http://i.imgur.com/TLvZb0E.png
     border_color: "#e82a8d"
 
-- neko_id: fujoshi
+- <<: *defaults
   level: 3
-  algo: simple
   threshold: 70
-  filters:
-    <<: *filters
   metadata:
     title_ru: Шиппер
     text_ru: Мужская дружба? Не, не слышали.
     image: http://i.imgur.com/DKfMKBR.png
     border_color: "#e82a8d"
 
-- neko_id: fujoshi
+- <<: *defaults
   level: 4
-  algo: simple
   threshold: 90
-  filters:
-    genre_ids:
-      - 28
-      - 33
   metadata:
     title_ru: Яойный бог
     text_ru: Яой - не жанр. Яой — это стиль жизни.
