--- a/priv/rules/historical.yml
+++ b/priv/rules/historical.yml
@@ -1,8 +1,9 @@
-- neko_id: historical
+- &defaults
+  neko_id: historical
   level: 1
   algo: simple
   threshold: 25
-  filters: &filters
+  filters:
     genre_ids:
       - 13
   metadata:
@@ -11,36 +12,27 @@
     image: http://i.imgur.com/PxbRfzj.png
     border_color: "#3c3949"
 
-- neko_id: historical
+- <<: *defaults
   level: 2
-  algo: simple
   threshold: 40
-  filters:
-    <<: *filters
   metadata:
     title_ru: Оглянувшись назад
     text_ru: Не знающий своего прошлого, не имеет будущего.
     image: http://i.imgur.com/B3b7MeQ.png
     border_color: "#4f3542"
 
-- neko_id: historical
+- <<: *defaults
   level: 3
-  algo: simple
   threshold: 60
-  filters:
-    <<: *filters
   metadata:
     title_ru: Археолог
     text_ru: Разбитая посуда приносит счастье только археологам.
     image: http://i.imgur.com/ZkXjMjT.jpg
     border_color: "#353a58"
 
-- neko_id: historical
+- <<: *defaults
   level: 4
-  algo: simple
   threshold: 100
-  filters:
-    <<: *filters
   metadata:
     title_ru: Путешественник во времени
     text_ru: |-
