--- a/priv/rules/kuudere.yml
+++ b/priv/rules/kuudere.yml
@@ -1,8 +1,9 @@
-- neko_id: kuudere
+- &defaults
+  neko_id: kuudere
   level: 1
   algo: simple
   threshold: 30%
-  filters: &filters
+  filters:
     anime_ids:
       - 9999999999
   metadata:
@@ -11,24 +12,18 @@
     image: http://gifok.net/images/2015/06/23/KUDERE1LVL.jpg
     border_color: "#9ad1ee"
 
-- neko_id: kuudere
+- <<: *defaults
   level: 2
-  algo: simple
   threshold: 55%
-  filters:
-    <<: *filters
   metadata:
     title_ru: Мудрость
     text_ru: Умный менее всего одинок тогда, когда он находится в одиночестве.
     image: http://gifok.net/images/2015/06/23/KUDERE2LVL.jpg
     border_color: "#4a4a40"
 
-- neko_id: kuudere
+- <<: *defaults
   level: 3
-  algo: simple
   threshold: 80%
-  filters:
-    <<: *filters
   metadata:
     title_ru: Хладнокровие
     text_ru: |-
