--- a/priv/rules/moe.yml
+++ b/priv/rules/moe.yml
@@ -1,8 +1,9 @@
-- neko_id: moe
+- &defaults
+  neko_id: moe
   level: 1
   algo: simple
   threshold: 30%
-  filters: &filters
+  filters:
     anime_ids:
       - 10012
       - 10080
@@ -188,24 +189,18 @@
     image: http://i944.photobucket.com/albums/ad284/dzh2011/02/yuruyuri22.jpg
     border_color: "#f0d698"
 
-- neko_id: moe
+- <<: *defaults
   level: 2
-  algo: simple
   threshold: 55%
-  filters:
-    <<: *filters
   metadata:
     title_ru: Лучи кавая
     text_ru: Поражают в самое сердце.
     image: http://i.imgur.com/ao63S07.png
     border_color: "#fdbdba"
 
-- neko_id: moe
+- <<: *defaults
   level: 3
-  algo: simple
   threshold: 80%
-  filters:
-    <<: *filters
   metadata:
     title_ru: Первоклассная моэта
     text_ru: Вы приняли слишком большую дозу тортиков и сами стали моэ.
