--- a/priv/rules/music.yml
+++ b/priv/rules/music.yml
@@ -1,8 +1,9 @@
-- neko_id: music
+- &defaults
+  neko_id: music
   level: 1
   algo: simple
   threshold: 20
-  filters: &filters
+  filters:
     genre_ids:
       - 19
   metadata:
@@ -11,24 +12,18 @@
     image: http://i.imgur.com/juINaek.png
     border_color: "#8fa9dc"
 
-- neko_id: music
+- <<: *defaults
   level: 2
-  algo: simple
   threshold: 40
-  filters:
-    <<: *filters
   metadata:
     title_ru: Это не вокалоид
     text_ru: Звуки сложились в песню.
     image: https://i.yapx.ru/JPn2.jpg
     border_color: "#4285b4"
 
-- neko_id: music
+- <<: *defaults
   level: 3
-  algo: simple
   threshold: 60
-  filters:
-    <<: *filters
   metadata:
     title_ru: Это не айдол
     text_ru: Вы ведь знаете, неважно что они поют, но они должны вкладывать в это своё сердце.
@@ -39,12 +34,9 @@
       - "#fb607f"
       - "#cd5c5c"
 
-- neko_id: music
+- <<: *defaults
   level: 4
-  algo: simple
   threshold: 100
-  filters:
-    <<: *filters
   metadata:
     title_ru: Это не продюсер
     text_ru: Кажется, вы знаток музыкальной индустрии. Ну и что теперь?.. Откроете своё агентство с инновациями и идолами?
