--- a/priv/rules/police.yml
+++ b/priv/rules/police.yml
@@ -1,8 +1,9 @@
-- neko_id: police
+- &defaults
+  neko_id: police
   level: 1
   algo: simple
   threshold: 25
-  filters: &filters
+  filters:
     genre_ids:
       - 39
   metadata:
@@ -11,24 +12,18 @@
     image: https://i.yapx.ru/JP01.jpg
     border_color: "#2F353B"
 
-- neko_id: police
+- <<: *defaults
   level: 2
-  algo: simple
   threshold: 40
-  filters:
-    <<: *filters
   metadata:
     title_ru: Гражданин, пройдёмте
     text_ru: У каждого полицейского есть дело, которое не даёт ему покоя.
     image: https://i.yapx.ru/JP2j.jpg
     border_color: "#c34d0a"
 
-- neko_id: police
+- <<: *defaults
   level: 3
-  algo: simple
   threshold: 60
-  filters:
-    <<: *filters
   metadata:
     title_ru: Отдел особого назначения
     text_ru: О скольких способах противостояния преступникам вы осведомлены?
@@ -39,12 +34,9 @@
       - "#f4a900"
       - "#1c1c1c"
 
-- neko_id: police
+- <<: *defaults
   level: 4
-  algo: simple
   threshold: 100
-  filters:
-    <<: *filters
   metadata:
     title_ru: Вершина иерархии? Высший начальствующий состав?
     text_ru: Как вы себя чувствуете, забравшись так далеко?
