--- a/priv/rules/yuuri.yml
+++ b/priv/rules/yuuri.yml
@@ -1,8 +1,9 @@
-- neko_id: yuuri
+- &defaults
+  neko_id: yuuri
   level: 1
   algo: simple
   threshold: 30%
-  filters: &filters
+  filters:
     genre_ids:
       - 26
       - 34
@@ -16,24 +17,18 @@
       - "#d5a471"
       - "#656b5e"
 
-- neko_id: yuuri
+- <<: *defaults
   level: 2
-  algo: simple
   threshold: 55%
-  filters:
-    <<: *filters
   metadata:
     title_ru: Первые чувства
     text_ru: Быть может, это неправильно. Но кого это волнует?
     image: http://i.imgur.com/75lnhMa.png
     border_color: "#d293a2"
 
-- neko_id: yuuri
+- <<: *defaults
   level: 3
-  algo: simple
   threshold: 80%
-  filters:
-    <<: *filters
   metadata:
     title_ru: Я поцеловала девушку...
     text_ru: ... и мне понравилось!
@@ -46,12 +41,9 @@
       - "#b99f9e"
       - "#935c49"
 
-- neko_id: yuuri
+- <<: *defaults
   level: 4
-  algo: simple
   threshold: 80%
-  filters:
-    <<: *filters
   metadata:
     title_ru: Счастливая семейная жизнь
     text_ru: Лилии цветут в вашем доме.
